--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -386,3 +386,11 @@ input[type=number]::-webkit-outer-spin-button {
 .fixLayer {
   display: flex;
 }
+.cu {
+    cursor: pointer;
+}
+.submit {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
