--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -394,3 +394,19 @@ input[type=number]::-webkit-outer-spin-button {
     justify-content: center;
     margin: 20px 0;
 }
+.businessItem ul li {
+	display: flex;
+	align-items: center;
+	margin: 20px 0;
+}
+.businessItem ul li .w50{
+	width: auto;
+	display: flex;
+	align-items: center;
+	margin-right: 20px;
+}
+.businessItem span.text{
+	width: 100px;
+	display: block;
+	font-weight: bold;
+}
